--- a/aplicacion/templates/inicio.html
+++ b/aplicacion/templates/inicio.html
@@ -58,7 +58,7 @@
 </style>
 <section id="maininfo" class="jumbotron text-center">
     <div class="container ">
-      <p class="animated fadeInLeftBig">By Aritz R</p>
+      <p class="animated heartBeat">By Aritz R</p>
       <h1>COVID 19<h2>{{country}}</h2></h1>
       </br>
       <p class="lead fs text-muted">Casos confirmados: {{data[0]}}</p>
